# django-poll-htmx

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  manage.py  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: main.yaml  ruff.yaml  test_with_coverage.yaml
polls/: admin.py  forms.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls_htmx/: asgi.py  settings.py  wsgi.py
static/css/: site.css
templates/: base.html
templates/polls/: detail.html  index.html  results.html  search.html
templates/polls/partials/: index_results.html  search_results.html
